--- a/conf/redis.conf
+++ b/conf/redis.conf
@@ -1,3 +1,7 @@
+appendonly yes
+auto-aof-rewrite-percentage 25
+auto-aof-rewrite-min-size 64mb
+
 tls-cert-file /tls/redis.crt
 tls-key-file /tls/redis.key
 tls-ca-cert-file /tls/ca.crt
